--- a/package.json
+++ b/package.json
@@ -4,8 +4,8 @@
   "description": "",
   "main": "main.js",
   "scripts": {
-    "compile": "browserify src/Game.js -o build/main.js -t [ babelify --presets [ es2015 ] ]",
-    "debug": "browserify src/Game.js -o build/main.js -t [ babelify --presets [ es2015 ] ] -d"
+    "compile": "browserify src/Game.js -o build/main.js -t [ babelify --presets [ es2015 stage-1 stage-2 stage-3 ] ]",
+    "debug": "browserify src/Game.js -o build/main.js -t [ babelify --presets [ es2015 stage-1 stage-2 stage-3 ] ] -d"
   },
   "author": "jokly",
   "license": "ISC",
@@ -14,6 +14,9 @@
   },
   "devDependencies": {
     "babel-preset-es2015": "^6.22.0",
+    "babel-preset-stage-1": "^6.24.1",
+    "babel-preset-stage-2": "^6.24.1",
+    "babel-preset-stage-3": "^6.24.1",
     "babelify": "^7.3.0",
     "browserify": "^14.1.0",
     "watchify": "latest"
